<com.islaidunas.ui.view.TransactionListItemView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/transaction_category"
        android:contentDescription="@string/category_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:src="@android:drawable/ic_dialog_info"
        />
    <RelativeLayout
        android:id="@+id/transaction_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/transaction_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="4dp"
            android:paddingLeft="4dp"
            android:text="@string/transaction_title" />
        <TextView android:id="@+id/transaction_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="italic"
            android:paddingLeft="4dp"
            android:layout_below="@id/transaction_name"
            android:text="@string/transaction_date" />
    </RelativeLayout>
    <TextView android:id="@+id/transaction_amount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="4dp"
        android:text="@string/transaction_amount"
        android:gravity="center_vertical|right"/>
</com.islaidunas.ui.view.TransactionListItemView>
