<com.islaidunas.ui.view.AddTransactionView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.islaidunas.ui.AddTransactionActivity"
    android:orientation="vertical"
    android:id="@+id/add_transaction_view">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/title"/>
    <EditText
        android:id="@+id/transaction_title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:selectAllOnFocus="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/amount"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">
        <EditText
                android:id="@+id/amount"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                />
        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="@string/LT"
            android:layout_toRightOf="@id/amount"
            android:gravity="center"
            android:textSize="30sp"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/transaction_cat_label" />
    <Spinner
        android:id="@+id/transaction_category"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/transaction_date_label"
        />
    <Button
        android:id="@+id/transaction_date"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="#115a0f"
        android:layout_gravity="right"/>

</com.islaidunas.ui.view.AddTransactionView>
